# cgg

./: .gitignore  CMakeLists.txt  README.MD  README.md  constant.h  dataExplorer.cpp  dataExplorer.h  lexAnalyser.cpp  lexAnalyser.h  lexical.txt  main.cpp  main.sh  parser.constDecl.cpp  parser.cpp  parser.exp.cpp  parser.funcDef.cpp  parser.h  parser.stmt.cpp  parser.strCon.cpp  parser.varDecl.cpp  syntaxTree.txt  test.sh  testfile.txt  tree.py  语法.docx
dataExplorer/: dataExplorer.cpp  dataExplorer.h  dataExplorer.midCode.cpp  dataExplorer.symbol.cpp  dataExplorer.tempVarPool.cpp
lex/: lexAnalyser.cpp  lexAnalyser.h
midcode/: midCode.constDecl.cpp  midCode.cpp  midCode.exp.cpp  midCode.func.cpp  midCode.stmt.cpp  midCode.varDecl.cpp
parser/: parser.constDecl.cpp  parser.cpp  parser.exp.cpp  parser.funcDef.cpp  parser.h  parser.stmt.cpp  parser.strCon.cpp  parser.varDecl.cpp
testfiles/: testfile_ori.txt  testfile_yc.txt
